# pq

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  GNUmakefile  Makefile  README.md  USAGE.md  make.sh  pq_docker  pqrs.1
doc/: 8months.md  erase.md
docs/: _pqrs.1  index.html
erased-serde-json/: Cargo.toml  README.md
erased-serde-json/src/: lib.rs  ser.rs
fdset/: .gitignore
fdset_discovery/: Cargo.toml
fdset_discovery/src/: error.rs  lib.rs
proto/: .gitignore
py-test/: .gitignore  Makefile  README.md  addressbook.proto  addressbook_pb2.py  dog.proto  generate_garbled_proto.py  generate_leading_varint.py  generate_random_proto.py  generate_stream.py  leading_varint.proto  main.py  person.proto  testbench.py
schemata/: .gitignore  unknown.fdset  unknown.proto
src/: .gitignore  canonical.rs  commands.rs  de.rs  decode.rs  descriptor.rs  discovery.rs  error.rs  errors.rs  force.rs  formatter.rs  glob.rs  length.rs  macros.rs  main.rs  newline_pretty_formatter.rs  protob.rs  serde_protobuf.rs  stream.rs  unknown.rs  usage.txt  value.rs
src/fdset_discovery/: mod.rs
src/newline_pretty_formatter/: mod.rs
stream-delimit/: Cargo.toml  README.md
stream-delimit/src/: byte_consumer.rs  converter.rs  error.rs  i32be.rs  kafka_consumer.rs  lib.rs  stream.rs  varint.rs
stream_delimit/: Cargo.toml  Makefile  README.md
stream_delimit/src/: byte_consumer.rs  byte_stream.rs  consumer.rs  converter.rs  error.rs  kafka_consumer.rs  kafka_stream.rs  leb128.rs  lib.rs  stream.rs  stream_consumer.rs  stream_converter.rs  stream_type.rs  varint.rs
stream_delimit/src/varint/: mod.rs
test-utils/: GNUmakefile  README.txt  cat.proto
testdata/: address.fdset
tests/: Makefile  README.md  integration.rs  test_pqrs_bin.rs  workdir.rs
tests/fdsets/: cat.fdset  dog.fdset  parent_child_map.fdset  parent_child_nested.fdset  person.fdset
tests/python/: .gitignore  Makefile  dog.proto  proto_encoder.py  testbench.py
tests/runner/: mod.rs
tests/samples/: bad  dog  dog_i32be_stream  dog_stream  dog_stream_trail  parent_map  parent_nested  person  person_stream
tests/schemata/: addressbook.rs  dog.rs  mod.rs  parent_child_map.proto  parent_child_nested.proto  person.rs
tests/workdir/: mod.rs
utils/: .gitignore  README.txt  proto_encoder.py
