[package]
name = "pq"
version = "1.0.3"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "jq for protobuf"
repository = "https://github.com/sevagh/pq"
documentation = "https://github.com/sevagh/pq"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "serde"]
exclude = ["pq-bin.tar.gz", "pq", "target/**"]

[dependencies]
serde = "1.0"
serde-value = "0.5"
erased_serde_json = { path = "erased-serde-json", version = "0.1.0" }
serde_json = "1.0"
serde-protobuf = "0.7"
protobuf = "1.4"
nix = "0.9"
stream_delimit = { path = "stream-delimit", version = "0.4.8" }
clap = "2"

[dev-dependencies]
assert_cli = "0.5"

[features]
default = ["stream_delimit/with_kafka"]

[workspace]
members = ["stream-delimit", "erased-serde-json"]

[profile.release]
debug = true
lto = true
panic = "abort"
