[package]
name = "erased_serde_json"
version = "0.1.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Type-erased Formatter trait for serde_json::ser::Formatter"
repository = "https://github.com/sevagh/erased-serde-json"
documentation = "https://github.com/sevagh/erased-serde-json"
keywords = ["json", "serde", "serialization"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
serde = "1.0"
serde_json = "1.0.2"
