[package]
name = "stream_delimit"
version = "0.5.1"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "length delimited protobuf stream separator"
repository = "https://github.com/sevagh/pq/tree/master/stream_delimit"
documentation = "http://docs.rs/stream_delimit/"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "serde"]

[dependencies]
kafka = { version = "0.7", optional = true }

[features]
default = []
with_kafka = ["kafka"]
