[package]
name = "stream_delimit"
version = "0.5.6"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "length delimited protobuf stream separator"
repository = "https://github.com/sevagh/pq/tree/master/stream_delimit"
documentation = "http://docs.rs/stream_delimit/"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "serde"]
edition = "2018"

[dependencies]
rdkafka = { version = "0.25.0", optional = true, features = ["zstd", "libz-static", "cmake-build"], default-features = false }
byteorder = "1.3"

[features]
default = []
with_kafka = ["rdkafka"]
