[package]
name = "stream_delimit"
version = "0.3.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "length delimited protobuf stream separator"
repository = "https://github.com/sevagh/pq/tree/master/stream_delimit"
readme = "./README.md"
license = "MIT"
keywords = ["protobuf", "serde"]

[dependencies]
kafka = "0.6.0"
