[package]
name = "stream_delimit"
version = "0.4.0"
authors = ["Sevag Hanssian <sevag.hanssian@gmail.com>"]
description = "length delimited protobuf stream separator"
repository = "https://github.com/sevagh/pq/tree/master/stream_delimit"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "serde"]

[dependencies]
libc = "0.2.22"
kafka = { version = "0.6.2", optional = true }

[features]
default = []
with_kafka = ["kafka"]
